--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     <div id="status" class="status">Disconnected</div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
